--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="start_btn">START</string>
     <string name="stop_btn">Stop</string>
     <string name="grid_image">grid image</string>
+    <string name="Grid">Grid</string>
 </resources>
